# AI-Game-Benchmark

./: .gitignore  CHANGELOG.md  README.md  SCHEMA.md  agents_test.json  analyze_carball.py  c1.json  carball_4agents.json  carball_4agents_v2.json  det2.json  match_bb_42_bis.json  match_carball_42.json  match_carball_42_bis.json  match_extra.json  micorts_30.json  micorts_capped.json  micorts_check.json  micorts_fixed.json  micorts_seed42.json  micorts_sides.json  pyproject.toml  t1.json  tacticfps_match_check.json  tacticfps_test_fixed.json  tournament_carball_br_20.json
datasets/: carball_200.json  micorts_200.json  tacticfps_200.json
game_benchmark/: __init__.py  cli.py  cli.py.bak  cli.py.bak2  cli.py.bak3  cli.py.bak_carball_bots  cli.py.bak_seed_tournament  cli.py.bak_tourney_seeds  exporter.py
game_benchmark/agents/: __init__.py  base.py
game_benchmark/agents/baselines/: __init__.py  carball_bot.py  micorts_bot.py  micorts_econ_bot.py  tacticfps_bot.py
game_benchmark/envs/: __init__.py  base.py  carball.py  micorts.py  tacticfps.py
game_benchmark/runner/: __init__.py  anticheat.py  elo.py  runner.py  runner.py.bak_agents  runner.py.bak_agents_fix  runner.py.bak_scores
game_benchmark/utils/: __init__.py
game_benchmark/web/: __init__.py  app.py
game_benchmark/web/static/: game.js  style.css
game_benchmark/web/templates/: dashboard.html  (+1 more)
notebooks/: benchmark_analysis.ipynb  generate_notebook.py
tests/: __init__.py  test_carball.py  test_micorts.py  test_micorts_determinism.py  test_runner.py  test_tacticfps.py  test_tacticfps_determinism.py
